This is V3 commit

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcome to our new applications!</h1>
     <h2>Second h2 tag added here</h2>
+    <div>My Div Tag</div>
 </body>
 </html>
